[package]
name = "mdpdf"
version = "0.1.0"
authors = ["Cobalt <chaosthe0rie@protonmail.com>"]
edition = "2018"
readme = "README.md"
description = "CLI tool for md (commonmark) to pdf conversion"
license = "GPLv3.0-or-newer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { version = "0.8", default-features = false }
askama = { version = "*", default-features = false }
ansi_term = "*"
ammonia = "*"
syntect = "4.4"
chrono = { version = "*", features = ["unstable-locales"] }
wkhtmltopdf = "*"

[package.metadata.deb]
section = "utility"
priority = "optional"
depends = "wkhtmltox"
assets = [["target/release/mdpdf", "usr/bin/", "755"]]

[dependencies.clap]
version = "^2.33.3"
default-features = false

# Cherry-pick the features you'd like to use
features = ["suggestions", "color", "wrap_help"]
